tests/errors/syn_class_var13.java
public class syn_class_var13 {
public static name ;
}